@@ -31,6 +31,7 @@ DROP TABLE    Modules;
 DROP TABLE    ModuleTemplates;
 DROP TABLE    ModuleTypes;
 DROP TABLE    Configurations;
+DROP TABLE    LockedConfigurations;
 DROP TABLE    Directories;
 DROP TABLE    Int32ParamValues;
 DROP TABLE    VInt32ParamValues;
